add images in bootstrap

--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
 </head>
 <body>
 
-<!--Star Wars Images-->
-
-
-
 <!--Game Instructins Stuff-->
 <div class="container-fluid">
   <h1>Star-Wars-Game</h1>
@@ -30,15 +26,25 @@
     <div class="row">
 
 
-       <!--First Image--> 
-      <div class="col bg-success">1 of 3</div>
+       <!--First 1stRow Image--> 
+      <div class="col-4"><img src="assets/images/leia.png" alt="leia"></div>
 
-      <!--Second Image-->
-      <div class="col bg-warning">2 of 3</div>
+      <!--Second 1stRow Image-->
+      <div class="col-4"><img src="assets/images/chewbacca.png" alt="chewbacca"></div>
 
-      <!--Third Image-->
-      <div class="col bg-success">3 of 3</div>
+      <!--Third 1stRow Image-->
+      <div class="col-4"><img src="assets/images/c-3po.png" alt="c-3p0"></div>
+    
+    </br>
       
+      <!--First 2nd Row Image-->
+      <div class="col-4"><img src="assets/images/DarthVader.png" alt="DarthVader"></div>
+
+      <!--Second 2nd Row Image-->
+      <div class="col-4"><img src="assets/images/Sith.png" alt="Sith"></div>
+
+      <!--Third 2nd Row Image-->
+      <div class="col-4"><img src="assets/images/StormTrooper.png" alt="StormTrooper"></div>
     </div>  
   </div>
 </div>
