--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Star-Wars-Game</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -9,12 +9,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-  <link rel="stylesheet" href="styles.css">
-  <link rel="resetsheet" href="reset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="resetsheet" href="assets/css/reset.css">
 
 
 </head>
 <body>
+
+<!--BackGround Stars-->
+<div class="stars"></div>
+<div class="twinkling"></div>
+
 
 <!--Game Instructins Stuff-->
 <div class="container-fluid">
