add font add styling

--- a/index.html
+++ b/index.html
@@ -23,10 +23,20 @@
 
 
 <!--Game Instructins Stuff-->
-<div class="container-fluid">
-  <h1>Star-Wars-Game</h1>
-  <p>Please Choose Your Character!</p>
 
+
+<div class="container-fluid">
+  <div class="row">
+ <div class="col-12">Star Wars Game</div>
+
+  </br>
+
+  <div class="col-12">Please Choose Your Character!</div>
+  </div>
+
+
+
+</br>
   <!--Image Stuff-->
   <div class="container-fluid">
     <div class="row">
